--- a/src/Dictionary.css
+++ b/src/Dictionary.css
@@ -2,3 +2,28 @@ body {
   color: blueviolet;
   text-align: center;
 }
+
+.Dictionary h1 {
+  font-size: 18px;
+  font-weight: bold;
+  margin-bottom: 20px;
+}
+
+.Dictionary section {
+  background-color: aliceblue;
+  padding: 30px;
+  border-radius: 8px;
+  box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.1);
+  margin: 20px 0;
+}
+
+.Dictionary input {
+  width: 100%;
+  padding: 6px 10px;
+  border-radius: 4px;
+  border: 1px solid #ddd;
+}
+.Dictionary .hint {
+  font-size: 11px;
+  margin-top: 5px;
+}
