--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+body {
+  background-color: #dde3fd;
+}
+
 .App {
   max-width: 960px;
   margin: 0 auto;
@@ -12,4 +16,8 @@
   font-size: 14px;
   text-align: center;
   margin: 30px 0;
+}
+
+.dictionary-link {
+  font-size: 11px;
 }
