--- a/src/Dictionary.css
+++ b/src/Dictionary.css
@@ -1,8 +1,3 @@
-body {
-  color: blueviolet;
-  text-align: center;
-}
-
 .Dictionary h1 {
   font-size: 18px;
   font-weight: bold;
@@ -10,7 +5,7 @@ body {
 }
 
 .Dictionary section {
-  background-color: aliceblue;
+  background-color: white;
   padding: 30px;
   border-radius: 8px;
   box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.1);
@@ -18,10 +13,10 @@ body {
 }
 
 .Dictionary input {
-  width: 100%;
   padding: 6px 10px;
   border-radius: 4px;
   border: 1px solid #ddd;
+  width: 100%;
 }
 .Dictionary .hint {
   font-size: 11px;
